<resources>
    <string name="app_name">SuperQuiz</string>
    <string name="et_username">Username</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="et_password">Password</string>
    <string name="tv_login_headline">Account Login</string>
    <string name="tv_main_headline">Join to start playing</string>
    <string name="tv_register_headline">Create Account</string>
    <string name="pref_file_key">de.semesterprojekt.paf_android_quiz_client.userdata</string>
    <string name="user_token">token</string>
    <string name="username">username</string>
</resources>